tests/ui/once_force_refresh_bare_bool.stderr
error: `force_refresh` takes a curly-brace block, e.g. `force_refresh = { id == 0 }` (or the quoted form `force_refresh = "{ id == 0 }"`)
 --> tests/ui/once_force_refresh_bare_bool.rs:6:24
  |
6 | #[once(force_refresh = true)]
  |                        ^^^^
